--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "ext-gd": "*"
     },
     "require-dev": {
     },
