--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,16 @@
     "require": {
         "php": "^7.2.5",
         "ext-ctype": "*",
+        "ext-gd": "*",
         "ext-iconv": "*",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "5.1.*",
-        "ext-gd": "*"
+        "symfony/yaml": "5.1.*"
     },
     "require-dev": {
     },
