--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.19",
+        "symfony/mime": "5.1.*",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.1.*"
