--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/mime": "5.1.*",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
