--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=90d28dacc26466d63e9a525ac571cd5e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/influencersv2
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+ MAILER_DSN=smtp://8e568513df6049:cdd05718f4f1ab@smtp.mailtrap.io:2525
+###< symfony/mailer ###
