added some extra style

--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/influencersv2
 ###> symfony/mailer ###
  MAILER_DSN=smtp://8e568513df6049:cdd05718f4f1ab@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
